[gd_scene load_steps=4 format=3 uid="uid://d4gcwwq41qd7y"]

[ext_resource type="Script" path="res://Scenes/level_menu.gd" id="1_mmit1"]
[ext_resource type="Texture2D" uid="uid://bnpc64s7h8agh" path="res://Assets/background.png" id="2_73txl"]

[sub_resource type="SystemFont" id="SystemFont_xuof0"]
font_names = PackedStringArray("Impact")

[node name="LevelMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_mmit1")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_73txl")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_xuof0")
theme_override_font_sizes/font_size = 64
text = "LEVELS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Level1" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level 1"

[node name="Level2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level 2
"

[node name="BossLevel" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Boss Level"

[node name="Main" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Level1" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Level2" to="." method="_on_level_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/BossLevel" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/BossLevel" to="." method="_on_boss_level_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Main" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Main" to="." method="_on_main_pressed"]
